<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graywhite">
    <RelativeLayout
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:id="@+id/ll_push_manage"
        style="@style/option_item_rl" >

        <TextView
            style="@style/option_item_text"
            android:text="@string/pushmanage" />
        <ImageView
            android:layout_alignParentRight="true"
            android:src="@drawable/me_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <View
        style="@style/h_line" />
    <RelativeLayout
        android:background="@color/white"
        android:id="@+id/ll_about"
        style="@style/option_item_rl" >

        <TextView
            style="@style/option_item_text"
            android:text="@string/about" />
        <ImageView
            android:layout_alignParentRight="true"
            android:src="@drawable/me_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <View
        style="@style/h_line" />
    <RelativeLayout
        android:background="@color/white"
        android:id="@+id/ll_feedback"
        style="@style/option_item_rl" >

        <TextView
            style="@style/option_item_text"
            android:text="@string/feedback" />
        <ImageView
            android:layout_alignParentRight="true"
            android:src="@drawable/me_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        style="@style/h_line" />
    <RelativeLayout
        android:background="@color/white"
        android:id="@+id/ll_clearCache"
        style="@style/option_item_rl" >

        <TextView
            style="@style/option_item_text"
            android:text="清理缓存" />

    </RelativeLayout>

    <View
        style="@style/h_line" />
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:id="@+id/ll_blank_list"
        style="@style/option_item_rl" >

        <TextView
            style="@style/option_item_text"
            android:text="@string/blanklist" />
        <ImageView
            android:layout_alignParentRight="true"
            android:src="@drawable/me_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <View
        style="@style/h_line" />
</LinearLayout>