<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:background="@color/default_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:id="@+id/rootview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/default_background">
            <!--头部-->
          <include layout="@layout/fragment_user_information_head" />

            <LinearLayout
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:id="@+id/ll_profit"
                style="@style/option_item_rl" >

                <ImageView
                    style="@style/option_item_img"
                    android:src="@drawable/me_under_harvest"
                    android:contentDescription="@null" />

                <TextView
                    style="@style/option_item_text"
                    android:text="@string/message" />

                <TextView
                    android:id="@+id/tv_mes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space_10"
                    android:gravity="right" />
            </LinearLayout>

            <View
                style="@style/h_line" />

            <LinearLayout
                android:background="@color/white"
                android:id="@+id/ll_level"
                style="@style/option_item_rl" >

                <ImageView
                    style="@style/option_item_img"
                    android:src="@drawable/me_under_grade"
                    android:contentDescription="@null" />

                <TextView
                    style="@style/option_item_text"
                    android:text="@string/blog" />
            </LinearLayout>

            <View
                style="@style/h_line" />

            <LinearLayout
                android:background="@color/white"
                android:id="@+id/ll_diamonds"
                style="@style/option_item_rl" >

                <ImageView
                    style="@style/option_item_img"
                    android:src="@drawable/me_under_myaccount"
                    android:contentDescription="@null" />

                <TextView
                    style="@style/option_item_text"
                    android:text="@string/note" />
            </LinearLayout>

            <View
                style="@style/h_line" />

            <LinearLayout
                android:background="@color/white"
                android:id="@+id/ll_authenticate"
                style="@style/option_item_rl" >
                <ImageView
                    style="@style/option_item_img"
                    android:src="@drawable/me_under_myaccount2"
                    android:contentDescription="@null" />
                <TextView
                    style="@style/option_item_text"
                    android:text="@string/authenticate" />
            </LinearLayout>
            <View
                style="@style/h_line" />

            <LinearLayout
                android:background="@color/white"
                android:id="@+id/ll_upload"
                style="@style/option_item_rl" >
                <ImageView
                    style="@style/option_item_img"
                    android:src="@drawable/me_under_myaccount2"
                    android:contentDescription="@null" />
                <TextView
                    style="@style/option_item_text"
                    android:text="上传文件" />
            </LinearLayout>

            <LinearLayout
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:id="@+id/ll_setting"
                style="@style/option_item_rl" >

                <ImageView
                    style="@style/option_item_img"
                    android:src="@drawable/me_under_nodisturbing"
                    android:contentDescription="@null" />

                <TextView
                    style="@style/option_item_text"
                    android:text="@string/team" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:id="@+id/ll_loginout"
                style="@style/option_item_rl" >
                <TextView
                    android:text="@string/loginout"
                    style="@style/option_item_text"
                    android:layout_width="fill_parent"
                    android:gravity="center"/>
            </LinearLayout>
           <View
               android:layout_width="match_parent"
               android:layout_height="60dp"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>