<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_home_page_index"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="2dp"
            android:id="@+id/rl_home_pager_yi_order"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/ticketorder"
                android:textColor="@color/global" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:orientation="horizontal">

                <com.ruziniu.phonelive.widget.AvatarView
                    android:id="@+id/av_home_page_order1"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp" />

                <com.ruziniu.phonelive.widget.AvatarView
                    android:id="@+id/av_home_page_order2"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp" />

                <com.ruziniu.phonelive.widget.AvatarView
                    android:id="@+id/av_home_page_order3"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/me_next" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            style="@style/v_line"></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:textColor="@color/global"
                    style="@style/home_user_info_item_labe"
                    android:text="@string/number" />

                <TextView
                    android:id="@+id/tv_home_page_num"
                    style="@style/home_user_info_item_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:textColor="@color/global"
                    style="@style/home_user_info_item_labe"
                    android:text="@string/sign" />

                <TextView
                    android:id="@+id/tv_home_page_sign2"
                    style="@style/home_user_info_item_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                style="@style/v_line"></View>
            <LinearLayout
                android:id="@+id/rl_dingwei"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="15dp"
                        android:text="点击导航"
                        android:textColor="@color/global" />

                    <TextView
                        android:layout_marginLeft="120dp"
                        android:id="@+id/tv_address_information"
                        android:layout_width="160dp"
                        android:padding="3dp"
                        android:maxLines="3"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="15dp"
                        android:gravity="center_vertical"
                        android:padding="8dp">
                        <View
                            android:layout_width="1dp"
                            android:layout_height="20dp"
                            android:background="@color/list_divider_color"/>
                        <ImageView
                            android:layout_marginLeft="15dp"
                            android:id="@+id/iv_home_page_phone"
                            android:layout_width="25dp"
                            android:layout_gravity="center"
                            android:layout_height="25dp"
                            android:src="@drawable/phone" />
                    </LinearLayout>
                    <View
                        android:layout_alignParentBottom="true"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        style="@style/v_line"></View>
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</merge>